Working list all items and show each item with all ingredients; todo: create new ingredients

--- a/app/views/menu_items/_form.html.erb
+++ b/app/views/menu_items/_form.html.erb
@@ -10,7 +10,8 @@
       </ul>
     </div>
   <% end %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, :placeholder => "Name" %>
+  <%= f.text_field :price, :placeholder => "Price"  %>
   <div class="actions">
     <%= f.submit %>
   </div>
