--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Makerbistro</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head>
+  	<meta charset="utf-8" />
 
-<%= yield %>
+  	<!-- Uncomment to make IE8 render like IE7 -->
+  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
-</body>
+  	<!-- Set the viewport width to device width for mobile -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  	<title><%= content_for?(:title) ? yield(:title) : "Makerbistro" %></title>
+
+  	<%= stylesheet_link_tag    "application" %>
+  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+<nav class="top-bar">
+  <ul class="title-area">
+    <li class="name">
+      <h1><%= link_to "Makerbistro", menu_items_path %></h1>
+    </li>
+  </ul>
+</nav>
+
+
+<div class="row">
+  <div class="large-8 columns"><%= yield %></div>
+  <div class="large-4 columns">
+    <h2>About Us</h2>
+    <p>Lorem ipsum dolor sit amet. Fringilla elementum mauris venenatis ac. Nullam at molestie dui. And flew away howlin' on the yellow moon. Who got bit by a dog with a rabid tooth. Ut ornare magna tincidunt. She went to her grave, a little too soon. Look for a dry place to call their home. They go to a lake of fire and fry. Ornare aliquet gravida sed erat. Before the angels and the devils fight to make 'em their own. Oh, I knew a lady who came from Duluth. Where do bad folks go when they die?. Nunc dignissim neque vel. They don't go to heaven where the angels fly. Odio orci eu eros. Now people cry and people moan. They don't go to heaven where the angels fly.</p>
+  </div>
+</div>
+    
+
+    
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
