--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Listing menu_items</h1>
+<h1>Makerbistro Menu</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Price</th>
       <th></th>
       <th></th>
       <th></th>
@@ -13,6 +15,7 @@
     <% @menu_items.each do |menu_item| %>
       <tr>
         <td><p><%= menu_item.name %></p></td>
+        <td><p><%= menu_item.price %></p></td>
         <td><%= link_to 'Show', menu_item %></td>
         <td><%= link_to 'Edit', edit_menu_item_path(menu_item) %></td>
         <td><%= link_to 'Destroy', menu_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
