--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -2,5 +2,9 @@
 
 <%= render 'form' %>
 
+<script type="text/javscript">
+  
+</script>
+
 <%= link_to 'Show', @menu_item %> |
 <%= link_to 'Back', menu_items_path %>
